--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.5.1",
+		"formsnap": "^2.0.0",
 		"lucide-svelte": "^0.477.0",
 		"mode-watcher": "^0.5.0",
 		"prettier": "^3.3.2",
@@ -28,12 +29,14 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^0.3.28",
+		"sveltekit-superforms": "^2.24.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
-		"vite": "^6.0.0"
+		"vite": "^6.0.0",
+		"zod": "^3.24.2"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.6.3",
