--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.483.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
