--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
 	},
 	"devDependencies": {
 		"@lucide/svelte": "^0.483.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-auto": "5.0.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.21.16",
+		"bits-ui": "0.22.0",
 		"clsx": "^2.1.1",
-		"embla-carousel-svelte": "^8.5.1",
-		"formsnap": "^2.0.0",
-		"lucide-svelte": "^0.477.0",
-		"mode-watcher": "^0.5.0",
+		"embla-carousel-svelte": "^8.5.2",
+		"formsnap": "^1.0.1",
+		"lucide-svelte": "0.483.0",
+		"mode-watcher": "^0.5.1",
+		"paneforge": "^0.0.6",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
@@ -31,10 +32,9 @@
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.24.0",
-		"tailwind-merge": "^2.5.5",
-		"tailwind-variants": "^0.3.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.9",
-		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0",
 		"zod": "^3.24.2"
@@ -47,7 +47,6 @@
 		"@vercel/analytics": "^1.4.1",
 		"@vercel/speed-insights": "^1.1.0",
 		"embla-carousel-autoplay": "^8.5.1",
-		"gsap": "^3.12.5",
 		"svelte-radix": "^2.0.1"
 	}
 }
